<resources>
    <string name="app_name"> 🥑  Nutrition Application</string>
    <string name="meals">Meals</string>
    <string name="foodEntries">Food entries</string>
    <string name="sl_breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
    <string name="snack">snack</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lactose">Lactose</string>
    <string name="fructose">Fructose</string>
    <string name="histamine">Histamine</string>
    <string name="minP">Minimum Protein</string>
    <string name="maxP">Maximum Protein</string>
    <string name="minK">Minimum Calories</string>
    <string name="maxK">Maximum Calories</string>
    <string name="recipeName">Recipe Name</string>
    <string name="search">Search</string>
    <string name="workingtime">Working Time</string>
    <string name="cookingtime">Cooking Time</string>
    <string name="portions">Amount of portions</string>
    <string name="menutype">Menu Type</string>
    <string name="image">Image</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="deleteText">Please enter the recipe ID.</string>
    <string name="idText">Please enter the recipe ID.</string>
    <string name="foodNameText">Please enter the name of the food.</string>
    <string name="foodCaloriesText">Please enter the amount of calories.</string>
    <string name="foodProteinText">Please enter the amount of protein.</string>
    <string name="foodAmountText">Please enter the amount.</string>
    <string name="foodIdText">Food Id to be deleted.</string>
    <string name="recipeIdText">Recipe Id to be deleted.</string>
    <string name="listRezeptname">Recipe name:</string>
    <string name="listArbeitszeit">Working time:</string>
    <string name="listKochzeit">Cooking time:</string>
    <string name="listGesamtzeit">Overall time:</string>
    <string name="listPortionen">Portions:</string>
    <string name="listVegan">is vegan:</string>
    <string name="listVegetarisch">is vegetarian:</string>
    <string name="listFructose">has fructose:</string>
    <string name="listLactose">has lactose:</string>
    <string name="listHistamine">has histamine:</string>
    <string name="listAuthor">Author:</string>
    <string name="listCalories">Calories:</string>
    <string name="listProteins">Protein:</string>
    <string name="listMenueart">Menutype:</string>
    <string name="welcome">Welcome to the Nutri-App!</string>
    <string name="instruction">Use the top right menu to navigate through the app!</string>

</resources>