<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipenameSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipeName" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/workingtimeSubmit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/workingtime"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <EditText
        android:id="@+id/cookingtimeSubmit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/cookingtime"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workingtimeSubmit" />

    <EditText
        android:id="@+id/portionsSubmit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/portions"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookingtimeSubmit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menutype"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/menutype"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portionsSubmit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/menueTypeSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/vegetarianSubmitBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/vegetarian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menutype" />

    <CheckBox
        android:id="@+id/veganSubmitBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/vegan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetarianSubmitBox" />

    <CheckBox
        android:id="@+id/fructoseSubmitBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        android:text="@string/fructose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menutype" />

    <CheckBox
        android:id="@+id/histamineSubmitBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:text="@string/histamine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fructoseSubmitBox" />

    <CheckBox
        android:id="@+id/lactoseSubmitBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lactose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veganSubmitBox" />

    <Button
        android:id="@+id/submitRecipie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="187dp"
        android:layout_height="91dp"
        android:layout_marginTop="10dp"
        android:contentDescription="imageToUpload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lactoseSubmitBox"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

</androidx.constraintlayout.widget.ConstraintLayout>