<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:fitsSystemWindows="true"
    android:textAlignment="center"
    android:visibility="visible"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".SearchbarActivity">

        <CheckBox
            android:id="@+id/vegetarianBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/vegetarian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchbarInput" />

        <CheckBox
            android:id="@+id/veganBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/vegan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vegetarianBox" />

        <CheckBox
            android:id="@+id/lactoseBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/lactose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fructoseBox" />

        <CheckBox
            android:id="@+id/fructoseBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/fructose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/veganBox" />

        <CheckBox
            android:id="@+id/histamineBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/histamine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lactoseBox" />

        <EditText
            android:id="@+id/minPBox"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:layout_marginTop="45dp"
            android:ems="10"
            android:hint="@string/minP"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/histamineBox" />

        <EditText
            android:id="@+id/maxPBox"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:layout_marginTop="45dp"
            android:ems="10"
            android:hint="@string/maxP"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/histamineBox" />

        <EditText
            android:id="@+id/minKBox"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:layout_marginTop="83dp"
            android:ems="10"
            android:hint="@string/minK"
            android:inputType="numberSigned"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minPBox" />

        <EditText
            android:id="@+id/maxKBox"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:layout_marginTop="83dp"
            android:ems="10"
            android:hint="@string/maxK"
            android:inputType="numberSigned"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxPBox" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchbarInput"
            android:layout_width="314dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/recipeName"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput"
                android:layout_width="314dp"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/searchbarInput"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>