<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addFoodToRecipeActivity">

    <EditText
        android:id="@+id/addFoodId"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/idText"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFoodId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/foodNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/foodNameText" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/calorieInput"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/foodCaloriesText"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <EditText
        android:id="@+id/proteinInput"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/foodProteinText"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorieInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteinInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/foodAmountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/foodAmountText" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/foodAddSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>